--- a/package.json
+++ b/package.json
@@ -19,5 +19,18 @@
   "bugs": {
     "url": "https://github.com/vunguyen2712/bookmark/issues"
   },
-  "homepage": "https://github.com/vunguyen2712/bookmark#readme"
+  "homepage": "https://github.com/vunguyen2712/bookmark#readme",
+  "dependencies": {
+    "body-parser": "^1.15.0",
+    "docco": "^0.7.0",
+    "express": "^4.13.4",
+    "grunt": "^0.4.5",
+    "heroku": "^0.1.3",
+    "jsonwebtoken": "^5.7.0",
+    "less": "^2.6.0",
+    "mocha": "^2.4.5",
+    "mongodb": "^2.1.6",
+    "mongoose": "^4.4.11",
+    "morgan": "^1.7.0"
+  }
 }
