--- a/public/bower.json
+++ b/public/bower.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "angular": "^1.5.3",
     "angular-material": "^1.0.7",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "material": "^0.1.1",
+    "ng-marviluz": "ng-material#^0.0.4"
   }
 }
