--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mocha": "^2.4.5",
     "mongodb": "^2.1.6",
     "mongoose": "^4.4.11",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "underscore": "^1.8.3"
   }
 }
